Added sample code to read and write from db, GlobalExceptionHandler, etc

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,20 @@
 spring:
   application:
     name: TaskManagerApplication
+
+  datasource:
+    url: jdbc:postgresql://localhost:5432/taskdb
+    username: docker
+    password: docker
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+  port: 9090
