--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,10 +11,25 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    show-sql: true
+    show-sql: false             # Disabled — this prints to stdout only, bypassing the log file
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
 
 server:
   port: 9090
+
+logging:
+  file:
+    name: logs/app.log          # Log file path — relative to project root
+  logback:
+    rollingpolicy:
+      max-file-size: 10MB       # Rotate when file reaches 10MB
+      max-history: 7            # Keep last 7 rotated files, delete older ones
+      file-name-pattern: logs/app-%d{yyyy-MM-dd}.%i.log  # Rotated file naming
+  level:
+    root: INFO                                    # Default log level for everything
+    com.example.TaskManagerApplication: DEBUG     # Your code logs at DEBUG level
+    org.hibernate.SQL: DEBUG                      # Logs the SQL queries (replaces show-sql: true)
+    org.hibernate.orm.jdbc.bind: TRACE            # Logs the actual values bound to ? placeholders
+
