--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   db:
     image: postgres:16
+    container_name: postgres
     environment:
       POSTGRES_USER: docker
       POSTGRES_PASSWORD: docker
